force-app/main/default/objects/MAS_Configuration__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>50</defaultValue>
    <description>Scope size passed to Database.executeBatch (1-200). Keep low for Flow targets, which share the batch transaction governor limits.</description>
</CustomField>