force-app/main/default/objects/MAS_Configuration__c/fields/Last_Run_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Completed_Date__c</fullName>
    <label>Last Run Completed Date</label>
    <type>DateTime</type>
</CustomField>