force-app/main/default/objects/MAS_Configuration__c/fields/Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Job_Id__c</fullName>
    <label>Scheduled Job Id</label>
    <type>Text</type>
    <length>18</length>
    <description>CronTrigger Id returned by System.schedule, stored so the job can be aborted on reschedule or deactivation.</description>
</CustomField>