force-app/main/default/objects/MAS_Configuration__c/fields/Source_SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>Source_SOQL_Query__c</fullName>
    <label>Source SOQL Query</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>SOQL query whose returned records are iterated. Passed to Database.getQueryLocator. Must select every field referenced by the field mappings.</description>
</CustomField>