force-app/main/default/objects/MAS_Configuration__c/fields/Target_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Action_Name__c</fullName>
    <label>Target Action Name</label>
    <type>Text</type>
    <length>255</length>
    <description>API name of the autolaunched Flow, or the Apex class exposing the @InvocableMethod, to invoke per record.</description>
</CustomField>