force-app/main/default/objects/MAS_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Target_Type__c</columns>
    <columns>Target_Action_Name__c</columns>
    <columns>Last_Run_Status__c</columns>
    <columns>Last_Run_Completed_Date__c</columns>
</ListView>