force-app/main/default/objects/MAS_Configuration__c/listViews/Manual.listView-meta.xml
<ListView>
    <fullName>Manual</fullName>
    <filterScope>Everything</filterScope>
    <label>Manual</label>
    <filters>
        <field>Schedule_Type__c</field>
        <operation>equals</operation>
        <value>Manual</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>NAME</columns>
    <columns>Target_Type__c</columns>
    <columns>Target_Action_Name__c</columns>
    <columns>Last_Run_Status__c</columns>
    <columns>Last_Run_Completed_Date__c</columns>
</ListView>